--- a/Source/Chronozoom.Entities/packages.config
+++ b/Source/Chronozoom.Entities/packages.config
@@ -5,7 +5,9 @@
   <package id="EnterpriseLibrary.WindowsAzure.TransientFaultHandling" version="5.1.1212.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="4.3.6" targetFramework="net45" />
+  <package id="Microsoft.Azure.Documents.Client" version="0.9.2-preview" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net45" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
   <package id="Unity" version="2.1.505.2" targetFramework="net45" />
