Created methods to connect to the database and the collection

--- a/Source/Chronozoom.Entities/Chronozoom.Entities.csproj
+++ b/Source/Chronozoom.Entities/Chronozoom.Entities.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Bitmask.cs" />
     <Compile Include="Bookmark.cs" />
     <Compile Include="Collection.cs" />
+    <Compile Include="DocumentStorage.cs" />
     <Compile Include="ManualMigrationCheck.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="ContentItem.cs" />
