--- a/Source/Chronozoom.UI/packages.config
+++ b/Source/Chronozoom.UI/packages.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
-  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
-  <package id="EntityFramework.Extended" version="5.0.0.73" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.Extended" version="6.1.0.133" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="4.3.6" targetFramework="net45" />
   <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="1.0.0-rc2" targetFramework="net45" />
@@ -17,6 +16,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Azure.DocumentDB" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
