--- a/Source/Chronozoom.Library/Chronozoom.Library.csproj
+++ b/Source/Chronozoom.Library/Chronozoom.Library.csproj
@@ -44,12 +44,14 @@
     <Compile Include="Models\Exhibit.cs" />
     <Compile Include="Models\Timeline.cs" />
     <Compile Include="Models\Tour.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICollectionRepository.cs" />
     <Compile Include="Repositories\IExhibitRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\ITimelineRepository.cs" />
     <Compile Include="Repositories\ITourRepository.cs" />
+    <Compile Include="Repositories\IUserRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
