Removed unused directory

--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -54,17 +54,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Collection.cs" />
-    <Compile Include="Models\ContentItem.cs" />
-    <Compile Include="Models\Exhibit.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="PersistencyEngine\MongoFactory.cs" />
+    <Compile Include="PersistencyEngine\UserFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PersistencyEngine\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
