--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="main.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="PersistencyEngine\MongoFactory.cs" />
