Fixed imports, added test suite project

--- a/Source/ChronoZoom.Mongo.Test/ChronoZoom.Mongo.Test.csproj
+++ b/Source/ChronoZoom.Mongo.Test/ChronoZoom.Mongo.Test.csproj
@@ -4,17 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3A94D52-091C-4A4C-BD08-DE5CC5F754F0}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{29710667-B8AB-4814-A390-3325D349005F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChronoZoom.Mongo</RootNamespace>
-    <AssemblyName>ChronoZoom.Mongo</AssemblyName>
+    <RootNamespace>ChronoZoom.Mongo.Test</RootNamespace>
+    <AssemblyName>ChronoZoom.Mongo.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -53,16 +55,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Collection.cs" />
-    <Compile Include="Models\User.cs" />
-    <Compile Include="PersistencyEngine\MongoFactory.cs" />
-    <Compile Include="PersistencyEngine\UserFactory.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ChronoZoom.Mongo\ChronoZoom.Mongo.csproj">
+      <Project>{c3a94d52-091c-4a4c-bd08-de5cc5f754f0}</Project>
+      <Name>ChronoZoom.Mongo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
