Include models made by @maxdebruijn in the project

--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Collection.cs" />
+	<Compile Include="Models\ContentItem.cs" />		
+    <Compile Include="Models\Exhibit.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="PersistencyEngine\MongoFactory.cs" />
     <Compile Include="PersistencyEngine\UserFactory.cs" />
