--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\ContentItem.cs" />
     <Compile Include="Models\Exhibit.cs" />
+    <Compile Include="Models\Timeline.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="PersistencyEngine\CollectionFactory.cs" />
     <Compile Include="PersistencyEngine\MongoFactory.cs" />
