Updated exhibit model, created exhibit factory, updated userfactory to use constant collection name

--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Models\Timeline.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="PersistencyEngine\CollectionFactory.cs" />
+    <Compile Include="PersistencyEngine\ExhibitFactory.cs" />
     <Compile Include="PersistencyEngine\MongoFactory.cs" />
     <Compile Include="PersistencyEngine\UserFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
