--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapper\IMapper.cs" />
+    <Compile Include="Mapper\UserMapper.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\ContentItem.cs" />
     <Compile Include="Models\Exhibit.cs" />
