Update CollectionMapper with more mapping methods

--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapper\CollectionMapper.cs" />
     <Compile Include="Mapper\UserMapper.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\ContentItem.cs" />
