Chronozoom.Library => Chronozoom.Business Repository Insert/Update/Delete async update

--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -70,9 +70,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Chronozoom.Library\Chronozoom.Library.csproj">
+    <ProjectReference Include="..\Chronozoom.Library\Chronozoom.Business.csproj">
       <Project>{6e362311-ada6-480f-a309-afa7a29704a7}</Project>
-      <Name>Chronozoom.Library</Name>
+      <Name>Chronozoom.Business</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
