--- a/Source/Chronozoom.Library.Test/Chronozoom.Library.Test.csproj
+++ b/Source/Chronozoom.Library.Test/Chronozoom.Library.Test.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{C3F2333D-6E34-487B-A0AA-74A131051755}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chronozoom.Library.Test</RootNamespace>
+    <RootNamespace>Chronozoom.Business.Test</RootNamespace>
     <AssemblyName>Chronozoom.Library.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -63,9 +63,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Chronozoom.Library\Chronozoom.Library.csproj">
+    <ProjectReference Include="..\Chronozoom.Library\Chronozoom.Business.csproj">
       <Project>{6e362311-ada6-480f-a309-afa7a29704a7}</Project>
-      <Name>Chronozoom.Library</Name>
+      <Name>Chronozoom.Business</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
