--- a/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
+++ b/Source/ChronoZoom.Mongo/ChronoZoom.Mongo.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mapper\CollectionMapper.cs" />
+    <Compile Include="Mapper\ExhibitMapper.cs" />
     <Compile Include="Mapper\UserMapper.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\ContentItem.cs" />
