new services and mre

--- a/Source/Chronozoom.Entities/Chronozoom.Entities.csproj
+++ b/Source/Chronozoom.Entities/Chronozoom.Entities.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Exhibit.cs" />
     <Compile Include="Repositories\CollectionRepository.cs" />
     <Compile Include="Repositories\ExhibitRepository.cs" />
-    <Compile Include="Repositories\TimeLineRepository.cs" />
+    <Compile Include="Repositories\TimelineRepository.cs" />
     <Compile Include="Repositories\TourRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Tile.cs" />
