Added IApplicationSettings interface and implementation for appilcation wide settings.

--- a/Source/Chronozoom.Library/Chronozoom.Business.csproj
+++ b/Source/Chronozoom.Library/Chronozoom.Business.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationSettings.cs" />
+    <Compile Include="IApplicationSettings.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\Compability\FlatTimeline.cs" />
     <Compile Include="Models\ContentItem.cs" />
