Added GetTour and required Controller/Service

--- a/Source/Chronozoom.UI/Chronozoom.UI.csproj
+++ b/Source/Chronozoom.UI/Chronozoom.UI.csproj
@@ -753,11 +753,9 @@
     <Compile Include="Controllers\Api\CollectionController.cs" />
     <Compile Include="Controllers\Api\ExportController.cs" />
     <Compile Include="Controllers\Api\ImportController.cs" />
-<<<<<<< .merge_file_a08084
     <Compile Include="Controllers\Api\TimelineController.cs" />
-=======
     <Compile Include="Controllers\Api\SearchController.cs" />
->>>>>>> .merge_file_a01240
+    <Compile Include="Controllers\Api\TourController.cs" />
     <Compile Include="default.ashx.cs">
       <DependentUpon>default.ashx</DependentUpon>
     </Compile>
