--- a/Source/Chronozoom.Library.Test/Chronozoom.Business.Test.csproj
+++ b/Source/Chronozoom.Library.Test/Chronozoom.Business.Test.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ExportServiceTest.cs" />
+    <Compile Include="Services\UserServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
