--- a/Source/Chronozoom.Library/Chronozoom.Business.csproj
+++ b/Source/Chronozoom.Library/Chronozoom.Business.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Services\TimelineService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Diagrams\Chronozoom.Business.Models.cd" />
+    <None Include="Diagrams\Chronozoom.Business.Repositories.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
