--- a/Source/Chronozoom.UI/packages.config
+++ b/Source/Chronozoom.UI/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" userInstalled="true" />
   <package id="Common.Logging" version="2.2.0" targetFramework="net45" userInstalled="true" />
   <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" userInstalled="true" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" userInstalled="true" />
+  <package id="EntityFramework" version="6.1.2" targetFramework="net45" userInstalled="true" />
   <package id="EntityFramework.Extended" version="5.0.0.73" targetFramework="net45" userInstalled="true" />
   <package id="EntityFramework.SqlServerCompact" version="4.3.6" targetFramework="net45" userInstalled="true" />
   <package id="jQuery" version="1.6.4" targetFramework="net45" userInstalled="true" />
@@ -29,7 +29,7 @@
   <package id="SharpBrake" version="2.2.1" targetFramework="net45" userInstalled="true" />
   <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net45" userInstalled="true" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" userInstalled="true" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" userInstalled="true" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" userInstalled="true" />
   <package id="WindowsAzure.Storage" version="2.0.5.1" targetFramework="net45" userInstalled="true" />
 </packages>
