Readded entity framework to Chronozoom.Entities.UnitTest

--- a/Source/Chronozoom.Entities.UnitTests/app.config
+++ b/Source/Chronozoom.Entities.UnitTests/app.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <add name="Storage" connectionString="Data Source=|DataDirectory|Storage.sdf" providerName="System.Data.SqlServerCe.4.0" />
@@ -12,14 +13,16 @@
   </appSettings>
   <entityFramework>
     <contexts>
-      <context type="Chronozoom.Entities.Storage,Chronozoom.Entities">
-      </context>
+      <context type="Chronozoom.Entities.Storage,Chronozoom.Entities"></context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
