Tour.bookmarks not implemented, bookmark classes

--- a/Source/Chronozoom.Library/Chronozoom.Business.csproj
+++ b/Source/Chronozoom.Library/Chronozoom.Business.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ApplicationSettings.cs" />
     <Compile Include="IApplicationSettings.cs" />
+    <Compile Include="Models\Bookmark.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\Compability\FlatTimeline.cs" />
     <Compile Include="Models\ContentItem.cs" />
