--- a/Source/Chronozoom.UI.Unittests/Chronozoom.UI.UnitTests.csproj
+++ b/Source/Chronozoom.UI.Unittests/Chronozoom.UI.UnitTests.csproj
@@ -46,15 +46,21 @@
     <Otherwise>
       <ItemGroup>
         <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
-          <Private>True</Private>
+          <Private>False</Private>
         </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Reference Include="Moq, Version=4.2.1506.2016, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.2.1506.2016\lib\net40\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <Private>True</Private>
@@ -78,6 +84,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Controllers\Api\SearchControllerTest.cs" />
+    <Compile Include="Controllers\Api\ExportControllerTest.cs" />
+    <Compile Include="Controllers\Api\ImportControllerTest.cs" />
     <Compile Include="Controllers\JasmineController.cs" />
     <Compile Include="FriendlyUrlTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -105,6 +114,10 @@
     <Content Include="Scripts\Specs\timeScaleSpec.js" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Chronozoom.Library\Chronozoom.Business.csproj">
+      <Project>{6e362311-ada6-480f-a309-afa7a29704a7}</Project>
+      <Name>Chronozoom.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Chronozoom.UI\Chronozoom.UI.csproj">
       <Project>{1a1f34c7-6e40-41c1-9adb-d374dbaf7c50}</Project>
       <Name>Chronozoom.UI</Name>
